Enhanced footer: padding, button color for large screens, standard look for small screens.

--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
 
 		<!-- Footer section  -->
 
-		<footer class="bg-black text-white shadow-inner">
+		<footer class="bg-black text-white shadow-inner pt-4 pb-8">
 			<div class="flex p-5 justify-between">
 				<div
 					class="flex flex-1 flex-col text-center sm:flex-row items-center justify-center space-x-3"
@@ -839,7 +839,7 @@
 								placeholder="Enter your email address"
 							/>
 							<button
-								class="bg-yellow-600 hover:bg-red-500 text-white py-2 px-4 rounded-md"
+								class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
 								type="submit"
 							>
 								Subscribe
@@ -925,7 +925,7 @@
 			</div>
 
 			<div
-				class="bg-gray-900 pt-5 pb-8 flex flex-col text-center md:hidden mt-8 items-center flex-1"
+				class="pt-5 pb-8 flex flex-col text-center md:hidden mt-8 items-center flex-1"
 			>
 				<div class="space-y-2">
 					<h3 class="text-2xl text-center">Subscribe to our newsletter</h3>
@@ -943,7 +943,7 @@
 
 						/>
 						<button
-							class="bg-red-600 hover:bg-red-500 text-white py-2 px-4 rounded-md"
+							class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
 							type="submit"
 						>
 							Subscribe
