Pending changes exported from your codespace

--- a/index.html
+++ b/index.html
@@ -911,10 +911,10 @@
 
 
 				<!-- Scroll to top -->
-				<div class="md:pr-8">
+				<div class="md:pr-8 hover-effect">
 					<a href="#top">
 						<button id="bttbutton" title="backtotop">
-							<img src="./Assets/Images/uparrow.png" class="w-6 md:w-10 md:object-left"/>
+							<img src="./image.svg" class="w-6 md:w-10 md:object-left"/>
 						</button>
 					</a>
 				</div>
@@ -955,7 +955,6 @@
 				<p>Copyright &copy; 2022 [PetMe] All Right Reserved.</p>
 			</div>
 		</footer>
-		
 		<script src="index.js"></script>
 		<script src="navbar.js"></script>
 		<script src="light-dark-theme.js"></script>
