--- a/news.html
+++ b/news.html
@@ -89,7 +89,7 @@
 							Report</a>
 					</li>
 					<li>
-						<a href="#contact">
+						<a href="./index.html#contact">
 							<button
 								class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0">
 								Contact Us
