Added favicon to this website

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
 			rel="stylesheet"
 		/>
+		<link rel="icon" href="icon.dog.png">
 		<title>PetMe</title>
 	</head>
 
