--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<link rel="stylesheet" href="./introSection.css" />
 		<link rel="stylesheet" href="./navbar.css" />
 		<link rel="stylesheet" href="./mobileView.css" />
-	
+		<link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
+		
 		<link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
 		<script
 			defer
