--- a/blog.html
+++ b/blog.html
@@ -172,8 +172,8 @@
       <!-- Social icons  -->
       <div class=" flex-1 flex flex-col items-center justify-center ">
         <div class="text-2xl">Follow us on</div>
-        <div class="flex mt-2 flex-row space-x-3 my-0">
-          <div>
+        <div class="flex mt-2 flex-row space-x-3 my-0 ">
+          <div class="hover:scale-110 transition-all">
             <a href="#" class=" w-5 ml-3">
               <!-- Facebook icon -->
               <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" class="fill-white" viewBox="0 0 20 20">
@@ -182,7 +182,7 @@
               </svg>
             </a>
           </div>
-          <div>
+          <div class="hover:scale-110 transition-all">
             <a href="#" class=" w-10 ml-3 mr-3">
               <!-- Instagram icon -->
               <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" class="fill-white" viewBox="0 0 20 20">
@@ -191,7 +191,7 @@
               </svg>
             </a>
           </div>
-          <div>
+          <div class="hover:scale-110 transition-all">
             <a href="https://github.com/akshitagupta15june/PetMe" target="_blank" class="w-10 ml-3 mr-3">
               <!-- Github icon -->
               <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" class="fill-white" viewBox="0 0 20 20">
