--- a/index.html
+++ b/index.html
@@ -850,10 +850,10 @@
 
 				<!-- Social icons  -->
 				<div class="flex-1 flex flex-col items-center justify-center">
-					<div class="text-2xl">Follow us on</div>
+					<div class="text-2xl">Follow us on </div>
 					<div class="flex mt-2 flex-row space-x-3 my-0">
-						<div>
-							<a href="#" class="w-5 ml-3">
+						<div class="hover:scale-110 transition-all">
+							<a href="#" class="w-5 ml-3 ">
 								<!-- Facebook icon -->
 								<svg
 									xmlns="http://www.w3.org/2000/svg"
@@ -868,7 +868,7 @@
 								</svg>
 							</a>
 						</div>
-						<div>
+						<div class="hover:scale-110 transition-all">
 							<a href="#" class="w-10 ml-3 mr-3">
 								<!-- Instagram icon -->
 								<svg
@@ -884,7 +884,7 @@
 								</svg>
 							</a>
 						</div>
-						<div>
+						<div class="hover:scale-110 transition-all">
 							<a
 								href="https://github.com/akshitagupta15june/PetMe"
 								target="_blank"
