Remove SOS button

--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
 		</div> -->
 		<!-- Scroll to top -->
 		
-			<!-- SOS button -->
+			<!-- SOS button 
 			<div>
 				<form action="./reportstary.html" method="get" target="_blank">
 					<button id="mySBtn" title="SOS">SOS</button>
 				</form>
 			</div>
-			<!--end of SOS button -->
+			  end of SOS button -->
 		</section>
 		<!-- About session  html starts from here -->
 
