--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
       <a class="logo-border" href="index.html">
         <img class="rounded-full logo-size" src="./Assets/Images/logo.jpg" alt="logo" />
       </a>
-      <span class="mission-2 mission-dark"> Saving Animals </span>
+      <span class="mission-2 mission-dark">Not Saving Animals </span>
     </div>
     <button data-collapse-toggle="navbar-default" type="button"
       class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 lg:hidden focus:outline-none  text_4 "
