--- a/reportstary.html
+++ b/reportstary.html
@@ -232,8 +232,7 @@
 
       <div class="flex justify-center">
         <div class="form-group text-white">
-          <button type="submit" id="submit"
-            class="bg-green-500 hover:bg-green-600 text-center py-3 px-12 rounded-full">Submit</button>
+          <button type="submit" id="submit" class="bg-green-500 hover:bg-green-600 py-3 px-12 rounded-full mx-auto">Submit</button>
         </div>
       </div>
       
