--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
 				<div class="flex-1 flex flex-col items-center justify-center">
 					<div class="text-2xl">Follow us on </div>
 					<div class="flex mt-2 flex-row space-x-3 my-0">
-						<div class="hover:scale-110 transition-all">
+						<div class="hover:scale-110 transition-all " id="facebook-i">
 							<a href="#" class="w-5 ml-3 ">
 								<!-- Facebook icon -->
 								<svg
@@ -868,7 +868,7 @@
 								</svg>
 							</a>
 						</div>
-						<div class="hover:scale-110 transition-all">
+						<div class="hover:scale-110 transition-all" id="instagram-icon">
 							<a href="#" class="w-10 ml-3 mr-3">
 								<!-- Instagram icon -->
 								<svg
