--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 			<br>
 			<br>
 			<div>
-				<h1 class="m-heading hover:shadow-2xl antialiased hover:subpixel-antialiased" >Meet our Friends Here</h1>
+				<h1 class="m-heading hover:shadow-2xl antialiased hover:subpixel-antialiased rounded-2xl p-1">Meet our Friends Here</h1>
 			</div>
 			<br>
 			<div class="one-line-card" id="meet">
