--- a/news.html
+++ b/news.html
@@ -391,9 +391,14 @@
 			</div>
 		</div>
 		<div id="copyright">
-			<p>Copyright &copy; 2022 [PetMe] All Right Reserved.</p>
+			<p>Copyright &copy; <span id="date"></span> [PetMe] All Right Reserved.</p>
 		</div>
 	</footer>
+	<script>
+		const date = new Date();
+		const year = date.getFullYear();
+		document.getElementById("date").innerHTML = year;
+	</script>
 	<script src="index.js"></script>
 	<script src="navbar.js"></script>
 	<script src="light-dark-theme.js"></script>
