--- a/news.html
+++ b/news.html
@@ -74,6 +74,9 @@
 					  <a href="#meet" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Meet Pets</a>
 					</li>
 					<li>
+					  <a href="index.html#About" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
+					</li>
+					<li>
 					  <a href="./blog.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
 					</li>
 					<li>
