--- a/adopt.html
+++ b/adopt.html
@@ -68,71 +68,140 @@
         </svg>
       </button>
       <nav class="">
-				<div class="hidden w-full lg:block z-2" id="navbar">
-				  <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
-					<li>
-					  <a href="./index.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
-					</li>
-					<li>
-					  <a href="#adopt" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Meet Pets</a>
-					</li>
-					<li>
-					  <a href="#About" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
-					</li>
-					<li>
-					  <a href="./news.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
-					</li>
-					<li>
-					  <a href="./blog.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
-					</li>
-					<li>
-					  <a href="./donate.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate</a>
-					</li>
-					<li>
-					  <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
-						<a @mouseover="open = true" class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full">
-						  Support Us
-						  <svg xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="mt-1">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-						  </svg>
-						</a>
-						<div x-show="open" class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
-						  <a href="volunteer.html" class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become a Volunteer</a>
-						</div>
-					  </div>
-					</li>
-					<li>
-					  <a href="./reportstary.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS Report</a>
-					</li>
-					<li>
-					  <a href="#contact">
-						<button class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0">
-						  Contact Us
-						  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-							<path d="M5 12h14M12 5l7 7-7 7"></path>
-						  </svg>
-						</button>
-					  </a>
-					</li>
-					<li>
-					  <a id="theme-toggle">
-						<img src="Assets/Images/sun.svg" width="50px" id="switch"/>
-					  </a>
-					</li>
-					<!-- google translate -->
-					<div id="google_translate_element">
-					  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-					</div>
-				  </ul>
-				</div>
-			  </nav>
+        <div class="hidden w-full lg:block z-2" id="navbar">
+          <ul
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
+          >
+            <li>
+              <a
+                href="./index.html"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="#adopt"
+                class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Meet Pets</a
+              >
+            </li>
+            <li>
+              <a
+                href="#About"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >About Us</a
+              >
+            </li>
+            <li>
+              <a
+                href="./news.html"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Pet News</a
+              >
+            </li>
+            <li>
+              <a
+                href="./blog.html"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Blogs</a
+              >
+            </li>
+            <li>
+              <a
+                href="./donate.html"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Donate</a
+              >
+            </li>
+            <li>
+              <div
+                x-data="{ open: false }"
+                @mouseleave="open = false"
+                class="relative"
+              >
+                <a
+                  @mouseover="open = true"
+                  class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full"
+                >
+                  Support Us
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="14px"
+                    height="14px"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                    class="mt-1"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M19 9l-7 7-7-7"
+                    ></path>
+                  </svg>
+                </a>
+                <div
+                  x-show="open"
+                  class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl"
+                >
+                  <a
+                    href="volunteer.html"
+                    class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
+                    >Become a Volunteer</a
+                  >
+                </div>
+              </div>
+            </li>
+            <li>
+              <a
+                href="./reportstary.html"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >SOS Report</a
+              >
+            </li>
+            <li>
+              <a href="#contact">
+                <button
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
+                >
+                  Contact Us
+                  <svg
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    class="w-4 h-4 ml-1"
+                    viewBox="0 0 24 24"
+                  >
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                  </svg>
+                </button>
+              </a>
+            </li>
+            <li>
+              <a id="theme-toggle">
+                <img src="Assets/Images/sun.svg" width="50px" id="switch" />
+              </a>
+            </li>
+            <!-- google translate -->
+            <div id="google_translate_element">
+              <script
+                type="text/javascript"
+                src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+              ></script>
+            </div>
+          </ul>
+        </div>
+      </nav>
     </header>
 
-    <div class="w-11/12 h-11/12 m-10 flex p-5">
+    <div class="w-11/12 h-11/12 flex mt-10 ml-5 p-5">
       <!-- About section -->
-
       <div
-        class="flex items-center justify-center bg-[#78350f] border-[#78350f] rounded-lg shadow-lg shadow-[#78350f] p-5"
+        class="bg-[#78350f] grid md:grid-cols-2 border-[#78350f] rounded-lg shadow-lg shadow-[#78350f] p-5"
       >
         <div class="flex justify-between gap-10 p-5 items-center flex-col">
           <h1 class="font-bold text-teal-400" id="title">
