--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<link rel="stylesheet" href="./navbar.css" />
 		<link rel="stylesheet" href="./mobileView.css" />	
 		<link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
+		<link rel="stylesheet" href="chatbot/chatbot.css">
+	
 		<script
 			defer
 			src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"
@@ -73,6 +75,35 @@
 					></path>
 				</svg>
 			</button>
+
+
+			
+			<!-- Here is HTML for Chatbot -->
+			<div class="chatbot-icon" id="chatbot-icon">
+				<img src="chatbot/chatbot-icon.png" alt="chatbot-icon" class="chatbot-icon">
+			</div>
+
+			<div class="chat-interface" id="chat-interface">
+				<div class="chat-header">
+					How can I help you
+				</div>
+
+				<div class="chat-messages" id="chat-messages">
+
+				</div>
+				<div class="user-options" id="user-options">
+					<h1>Please select your issue :</h1>
+					<ul>
+            <li><button class="option-button" data-option="Want to Donate">Want to Donate</button></li>
+            <li><button class="option-button" data-option="Want to Report">Want to Report</button></li>
+            <li><button class="option-button" data-option="Want to Contact">Want to Contact</button></li>
+        </ul>
+				</div>
+			</div>
+
+
+
+
 			<nav class="">
 				<div class="hidden w-full lg:block z-2" id="navbar">
 				  <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
@@ -988,5 +1019,10 @@ window.addEventListener("scroll", function () {
 		<script src="index.js"></script>
 		<script src="navbar.js"></script>
 		<script src="light-dark-theme.js"></script>
+
+		<!-- Here is JS code for chatbot -->
+		<script src="chatbot/chatbot.js"></script>
+
+
 	</body>
 </html>
