--- a/donate.html
+++ b/donate.html
@@ -138,7 +138,7 @@
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="name" class="leading-7 text-sm text-gray-900">Full Name</label>
-                <input type="text" id="name" name="name" placeholder="John Doe"
+                <input type="text" id="name" name="name" placeholder="John Doe" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   required />
               </div>
@@ -146,7 +146,7 @@
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="email" class="leading-7 text-sm text-gray-900">Email</label>
-                <input type="email" id="email" name="email" placeholder="youremail@gmail.com"
+                <input type="email" id="email" name="email" placeholder="youremail@gmail.com" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   required />
               </div>
@@ -154,7 +154,7 @@
             <div class="p-2 w-full">
               <div class="relative">
                 <label for="address" class="leading-7 text-sm text-gray-900">Address</label>
-                <input type="text" id="address" name="address" placeholder="Your Address"
+                <input type="text" id="address" name="address" placeholder="Your Address" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   required />
               </div>
@@ -162,7 +162,7 @@
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="city" class="leading-7 text-sm text-gray-900">City</label>
-                <input type="text" id="city" name="city" placeholder="Agra"
+                <input type="text" id="city" name="city" placeholder="Agra" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   required />
               </div>
@@ -170,7 +170,7 @@
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="state" class="leading-7 text-sm text-gray-900">State</label>
-                <input type="text" id="state" name="state" placeholder="Uttar Pradesh"
+                <input type="text" id="state" name="state" placeholder="Uttar Pradesh" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   required />
               </div>
@@ -178,7 +178,7 @@
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="country" class="leading-7 text-sm text-gray-900">Country</label>
-                <input type="text" id="country" name="country" placeholder="India"
+                <input type="text" id="country" name="country" placeholder="India" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   required />
               </div>
@@ -187,7 +187,7 @@
               <div class="relative">
                 <label for="number" class="leading-7 text-sm text-gray-900">Contact Number</label>
 
-                <input type="text" id="number" name="number" placeholder="+91 0123456789" 
+                <input type="text" id="number" name="number" autocomplete="off" placeholder="+91 0123456789" 
 
                 
 
@@ -199,7 +199,7 @@
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="pet-type" class="leading-7 text-sm text-gray-900">Pet Type</label>
-                <input type="text" id="pet-type" name="pet-type" placeholder="Dog"
+                <input type="text" id="pet-type" name="pet-type" placeholder="Dog" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   required />
               </div>
@@ -207,14 +207,14 @@
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="name" class="leading-7 text-sm text-gray-900">Pet Name</label>
-                <input type="text" id="name" name="name" placeholder="Charlie"
+                <input type="text" id="name" name="name" placeholder="Charlie" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" />
               </div>
             </div>
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="pet-color" class="leading-7 text-sm text-gray-900">Pet Color</label>
-                <input type="text" id="pet-color" name="pet-color" placeholder="Yellow"
+                <input type="text" id="pet-color" name="pet-color" placeholder="Yellow" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   required />
               </div>
@@ -222,7 +222,7 @@
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="color" class="leading-7 text-sm text-gray-900">Pet Breed</label>
-                <input type="text" id="breed" name="color" placeholder="German Shepherd"
+                <input type="text" id="breed" name="color" placeholder="German Shepherd" autocomplete="off"
                   class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
                   required />
               </div>
