--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </li>
             <li>
               <a
-                href="./donate.html"
+                href="./donate1.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Donate</a
               >
