--- a/news.html
+++ b/news.html
@@ -292,7 +292,7 @@
 			<div class="flex-1 flex flex-col items-center justify-center">
 				<div class="text-2xl">Follow us on</div>
 				<div class="flex mt-2 flex-row space-x-3 my-0">
-					<div>
+					<div class="hover:scale-110 transition-all">
 						<a href="#" class="w-5 ml-3">
 							<!-- Facebook icon -->
 							<svg
@@ -308,7 +308,7 @@
 							</svg>
 						</a>
 					</div>
-					<div>
+					<div class="hover:scale-110 transition-all">
 						<a href="#" class="w-10 ml-3 mr-3">
 							<!-- Instagram icon -->
 							<svg
@@ -324,7 +324,7 @@
 							</svg>
 						</a>
 					</div>
-					<div>
+					<div class="hover:scale-110 transition-all">
 						<a
 							href="https://github.com/akshitagupta15june/PetMe"
 							target="_blank"
