About us content color changed to black in NIGHT mode

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           About Us
         </h2>
         <p
-          class="mb-8 lg:mb-16 font-light text-center text-gray-200 dark:text-gray-400 sm:text-2xl text_6"
+          class="mb-8 lg:mb-16 font-light text-center text-gray-900 dark:text-white text_3 sm:text-2xl text_6"
         >
           Our mission is to provide a platform that connects animal lovers with
           pets in need of a forever home, while also providing emergency medical
