--- a/volunteer.html
+++ b/volunteer.html
@@ -60,6 +60,20 @@
                     <li><a href="index.html"
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
                     </li>
+                    <li>
+                      <a
+                        href="#About"
+                        class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">
+                          About Us
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="./news.html"
+                        class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">
+                          Pet News
+                      </a>
+                    </li>
                     
                     <li><a href="blog.html"
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
