--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     />
     <title>PetMe</title>
   </head>
+  <script>(function(){var pp=document.createElement('script'), ppr=document.getElementsByTagName('script')[0]; stid='dW1mV1NJZ0lsbytKQTkyK3RWc3hqUT09';pp.type='text/javascript'; pp.async=true; pp.src=('https:' == document.location.protocol ? 'https://' : 'http://') + 's01.live2support.com/dashboardv2/chatwindow/'; ppr.parentNode.insertBefore(pp, ppr);})();</script>
 
   <body>
     <header
@@ -192,6 +193,12 @@
             </li>
             <!-- google translate -->
             <div id="google_translate_element">
+              <style>
+                #google_translate_element {
+                  background-color: #f4f4f4;
+                  border: 1px solid #ccc;
+                }
+              </style>             
               <script
                 type="text/javascript"
                 src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
