--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <br />
       <div>
         <h1
-          class="m-heading hover:shadow-2xl antialiased hover:subpixel-antialiased"
+          class="m-heading text-3xl lg:text-6xl hover:shadow-2xl antialiased hover:subpixel-antialiased"
         >
           Meet our Friends Here
         </h1>
