--- a/reportstary.html
+++ b/reportstary.html
@@ -233,10 +233,10 @@
       <div class="flex justify-center">
         <div class="form-group text-white">
           <button type="submit" id="submit"
-            class="bg-green-500 hover:bg-green-600 text-center py-3 px-12 rounded-full">Submit</button>
+            class="flex mx-auto text-white bg-amber-900 border-0 py-3 px-12 rounded-md cursor-pointer hover:bg-yellow-900">Submit</button>
         </div>
       </div>
-      
+
 
     </form>
   </div>
