Changed icons position

--- a/adopt.html
+++ b/adopt.html
@@ -233,7 +233,7 @@
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
                 id="person"
-                class="w-6 h-6 relative top-2 inline-block mr-2"
+                class="w-6 h-6 relative top-8 right-7 inline-block mr-2"
               >
                 <g data-name="Layer 2">
                   <path
@@ -258,7 +258,7 @@
                 height="24"
                 viewBox="0 0 24 24"
                 id="email"
-                class="w-6 h-6 relative top-2 inline-block mr-2"
+                class="w-6 h-6 relative top-8 right-7 inline-block mr-2"
               >
                 <path fill="none" d="M0 0h24v24H0V0z"></path>
                 <path
@@ -279,7 +279,7 @@
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 256 256"
                 id="house"
-                class="w-6 h-6 relative top-2 inline-block mr-2"
+                class="w-6 h-6 relative top-8 right-7 inline-block mr-2"
               >
                 <rect width="256" height="256" fill="none"></rect>
                 <path
@@ -300,7 +300,7 @@
                 data-name="Layer 1"
                 viewBox="0 0 24 24"
                 id="address"
-                class="w-6 h-6 relative top-2 inline-block mr-2"
+                class="w-6 h-6 relative top-8 right-7 inline-block mr-2"
               >
                 <path
                   d="M19.82 9H17.9a1.38 1.38 0 0 1 0 .2 8.89 8.89 0 0 1-.79 2.24 21.17 21.17 0 0 1-3.66 5L12 17.81l-1.41-1.39a20.83 20.83 0 0 1-3.67-5 8.81 8.81 0 0 1-.79-2.25A1.25 1.25 0 0 1 6.1 9H4.18l-2.4 12h20.44Z"
@@ -323,7 +323,7 @@
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
                 id="phone"
-                class="w-6 h-6 relative top-2 inline-block mr-2"
+                class="w-6 h-6 relative top-8 right-7 inline-block mr-2"
               >
                 <g data-name="Layer 2">
                   <g data-name="phone">
