add meta tags for previews

--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
       rel="stylesheet"
     />
     <title>PetMe</title>
+    <meta name="title" content="PetMe"/>
+    <meta name="description" content="Adopt a pet. Give life to an animal in need."/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://akshitagupta15june.github.io/PetMe/"/>
+    <meta property="og:title" content="PetMe"/>
+    <meta property="og:description" content="Adopt a pet. Give life to an animal in need."/>
+    <meta property="og:image" content="https://akshitagupta15june.github.io/PetMe/Assets/Images/logo.jpg"/>
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://akshitagupta15june.github.io/PetMe/"/>
+    <meta property="twitter:title" content="PetMe"/>
+    <meta property="twitter:description" content="Adopt a pet. Give life to an animal in need."/>
+    <meta property="twitter:image" content="https://akshitagupta15june.github.io/PetMe/Assets/Images/logo.jpg"/>
+
   </head>
 
   <body>
