Font size of navbar items in different pages are not same #1128

--- a/donate.html
+++ b/donate.html
@@ -79,7 +79,7 @@
     </button>
     <nav class="">
       <div class="hidden w-full lg:block z-2" id="navbar">
-        <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
+        <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-mm space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
         <li>
           <a href="./index.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
         </li>
@@ -100,7 +100,7 @@
             </svg>
           </a>
           <div x-show="open" class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
-            <a href="volunteer.html" class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become a Volunteer</a>
+            <a href="volunteer.html" class="block px-4 py-2 text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become a Volunteer</a>
           </div>
           </div>
         </li>
