--- a/index.html
+++ b/index.html
@@ -80,13 +80,12 @@
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
           <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-mm space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
           >
             <li>
               <a
                 href="#meet"
                 class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                style=""
                 >Meet Pets</a
               >
             </li>
@@ -152,7 +151,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
+                    class="block px-4 py-2 text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
                     >Become a Volunteer</a
                   >
                 </div>
