Nav links has been edited

--- a/adopt.html
+++ b/adopt.html
@@ -81,14 +81,14 @@
             </li>
             <li>
               <a
-                href="#adopt"
+                href="./index.html#meet"
                 class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Meet Pets</a
               >
             </li>
             <li>
               <a
-                href="#About"
+                href="./index.html#About"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >About Us</a
               >
@@ -162,7 +162,7 @@
               >
             </li>
             <li>
-              <a href="#contact">
+              <a href="./index.html#contact">
                 <button
                   class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0"
                 >
