Fixed h1 of SOS

--- a/reportstary.html
+++ b/reportstary.html
@@ -149,7 +149,7 @@
 
   </header>
   <div class=" flex flex-col items-center ">
-    <div class="info my-4 max-w-[625px]">
+    <div class="info my-4 mt-36 max-w-[625px]">
       <h1 id="title">Report any Critical stray animal to the nearest Animal Care centres</h1>
       <p id="description">The details you provide with this form will be used to reach the nearest authority at the
         location of the stray animal.</p>
