about us, adopt link fixed

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           pets in need of a forever home, while also providing emergency medical
           care for stray animals in distress. We strive to make a difference in
           the lives of these innocent creatures by offering options to
-          <a class="hover-underline-animation" href="#adopt"><b>Adopt</b></a
+          <a class="hover-underline-animation" href="#meet"><b>Adopt</b></a
           >,
           <a class="hover-underline-animation" href="./donate.html"
             ><b>Donate</b></a
