fixed_nav_alignment

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li>
               <a
                 href="#meet"
-                class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 style=""
                 >Meet Pets</a
               >
