Update disha.html- Added some more info

--- a/blogs/disha.html
+++ b/blogs/disha.html
@@ -106,6 +106,12 @@
                 <p class="text-[#5b5963] my-[1rem] mx-0 text-xl">Dog’s are not playthings for you’re entertainment, they’re sensitive, intelligent and loving creatures. Like humans they suffer, get depressed and get bored. With love, caring and compassion they will give you more happiness and joy than you could even imagine. So keeping your dog happy will in turn keep you happy. I call that a win-win situation.
 
                 </p>
+                
+                <p class="text-[#5b5963] my-[1rem] mx-0 text-xl">Keeping your dog happy requires attention, care, and love. First and foremost, provide regular exercise. Dogs thrive on physical activity, so daily walks, playtime, and even off-leash romps in a safe area are essential to their well-being.
+                    Nourishment is crucial. Feed your dog a balanced diet appropriate for their age, size, and breed. Consult your vet for guidance on their specific nutritional needs. Fresh water should always be accessible.
+                    Socialization is key. Dogs are social creatures, so introduce them to other dogs and people to prevent loneliness and anxiety. Spend quality time with your pet through cuddles, belly rubs, and interactive play. Training and mental stimulation also keep them engaged and happy.
+                    Maintain their health with regular vet check-ups and vaccinations. Grooming, including brushing their coat and keeping their environment clean, ensures comfort. A safe, comfortable space to call their own, like a cozy bed, completes their happiness.
+                </p>
 
             </div>
 
