Added two more dogs

--- a/index.html
+++ b/index.html
@@ -330,6 +330,106 @@
                 <button type="button" class="hover-button">Adopt me</button></a
               >
             </div>
+          </div> 
+        </div>
+        <div class="main-card card-height shadow-2xl">
+          <div class="main-img">
+            <div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
+              <a href="#">
+                <img class="card-img-size" src="https://cdn.britannica.com/68/235668-050-A8F37B6D/Saint-bernard-dog-st-bernard-standing-short-haired.jpg" alt="" />
+              </a>
+            </div>
+          </div>
+          <div class="main-text">
+            <div class="p-4 flex flex-col gap-2">
+              <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+                Boby
+              </h5>
+              <ul class="grid grid-cols-2 gap-5 text_4">
+                <li class="flex gap-2 text-xl justify-self-center">
+                  <img
+                    class="w-5 icon h-auto"
+                    src="Assets/Images/dog-icon.svg"
+                    alt=""
+                  />
+                  <span>Dog</span>
+                </li>
+                <li class="flex text-xl justify-self-center">
+                  <span>5 years</span>
+                </li>
+                <li class="flex text-xl justify-self-center">
+                  <span>Male</span>
+                </li>
+                <li class="flex text-xl justify-self-center">
+                  <span>saint bernard</span>
+                </li>
+                <li class="flex text-xl justify-self-center">
+                  <span>Orange and White</span>
+                </li>
+                <li class="flex gap-2 text-xl justify-self-center">
+                  <img
+                    class="w-5 icon h-auto"
+                    src="Assets/Images/loation-icon.svg"
+                    alt=""
+                  />
+                  <span>Ranchi</span>
+                </li>
+              </ul>
+              <a class="self-center" href="adopt.html">
+                <button type="button" class="hover-button">Adopt me</button></a
+              >
+            </div>
+          </div>
+        </div>
+ </div>
+      <div  class="one-line-card" id="meet"  >
+        <div class="main-card card-height shadow-2xl">
+          <div class="main-img">
+            <div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
+              <a href="#">
+                <img class="card-img-size" src="https://cdn.pixabay.com/photo/2015/06/11/14/29/labrador-805863_640.jpg" alt="" />
+              </a>
+            </div>
+          </div>
+          <div class="main-text">
+            <div class="p-4 flex flex-col gap-2">
+              <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+               Jack
+              </h5>
+              <ul class="grid grid-cols-2 gap-5 text_4">
+                <li class="flex gap-2 text-xl justify-self-center">
+                  <img
+                    class="w-5 icon h-auto"
+                    src="Assets/Images/dog-icon.svg"
+                    alt=""
+                  />
+                  <span>Dog</span>
+                </li>
+                <li class="flex text-xl justify-self-center">
+                  <span>3 years</span>
+                </li>
+                <li class="flex text-xl justify-self-center">
+                  <span>Male</span>
+                </li>
+                <li class="flex text-xl justify-self-center">
+                  <span>Labrador</span>
+                </li>
+                <li class="flex text-xl justify-self-center">
+                  <span>Cream</span>
+                </li>
+                <li class="flex gap-2 text-xl justify-self-center">
+                  <img
+                    class="w-5 icon h-auto"
+                    src="Assets/Images/loation-icon.svg"
+                    alt=""
+                  />
+                  <span>Jamshedpur</span>
+                </li>
+              </ul>
+              <a class="self-center" href="adopt.html">
+                <button type="button" class="hover-button">Adopt me</button></a
+              >
+            </div>
           </div>
         </div>
         <div class="main-card card-height shadow-2xl">
@@ -381,7 +481,9 @@
             </div>
           </div>
         </div>
-      </div>
+    
+        </div>
+        
       <div class="one-line-card">
         <div class="main-card card-height shadow-2xl">
           <div class="main-img">
