sheru dog card shadow fixed

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
               </a>
             </div>
           </div>
-          <div class="main-text shadow-xl">
+          <div class="main-text">
             <div class="p-4 flex flex-col gap-2">
               <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
                 Sheru
