added border radius

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               >
                 <a
                   @mouseover="open = true"
-                  class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full"
+                  class="text-custom-heading flex font-bold hover:underline hover: cursor-pointer underline-offset-4 turn-red-hover navbar-item w-full"
                 >
                   Support Us
                   <svg
@@ -272,7 +272,7 @@
       <br />
       <div>
         <h1
-          class="m-heading text-3xl lg:text-6xl hover:shadow-2xl antialiased hover:subpixel-antialiased"
+          class="m-heading text-3xl lg:text-6xl hover:shadow-2xl antialiased hover:subpixel-antialiased rounded-lg"
         >
           Meet our Friends Here
         </h1>
