update about us

--- a/index.html
+++ b/index.html
@@ -233,39 +233,39 @@
 			  end of SOS button -->
     </section>
     <!-- About session  html starts from here -->
-
-    <section class="bg-white dark:bg-gray-900 b_1 shadow-2xl">
-      <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
-        <p id="About"></p>
-        <h2
-          class="mb-8 text-7xl tracking-tight hover:underline underline-offset-4 turn-yellow-hover antialiased font-extrabold text-center text-gray-900 dark:text-white text_3"
-          style="padding-top: 120px; padding-bottom: 25px"
-        >
-          About Us
-        </h2>
-        <p
-          class="mb-8 lg:mb-16 font-light text-center text-gray-900 dark:text-white text_3 sm:text-2xl text_6"
-        >
-          Our mission is to provide a platform that connects animal lovers with
-          pets in need of a forever home, while also providing emergency medical
-          care for stray animals in distress. We strive to make a difference in
-          the lives of these innocent creatures by offering options to
-          <a class="hover-underline-animation" href="#meet"><b>Adopt</b></a
-          >,
-          <a class="hover-underline-animation" href="./donate.html"
-            ><b>Donate</b></a
-          >
-          and through our SOS feature
-          <a class="hover-underline-animation" href="./reportstary.html"
-            ><b>Report</b></a
-          >
-          stray animals in need of immediate assistance. Together, we can create
-          a better world for all animals.
+    <section class="bg-blue-900 dark:bg-gray-900 b_1 shadow-2xl text-white py-16">
+      <div class="container mx-auto text-center">
+        <h2 class="text-5xl font-extrabold mb-6">About Us</h2>
+        <p class="text-lg text-gray-300 mb-12">
+          Our mission is to create a world where every animal has a loving home. We connect animal lovers with pets in need and provide emergency medical care for distressed stray animals. Join us in making a difference through:
         </p>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-8">
+          <div>
+            <img src="/icons/adoption.png" alt="Adopt" class="w-16 h-16 mx-auto mb-4" />
+            <h3 class="text-xl font-semibold mb-4">Adoption</h3>
+            <p class="text-gray-300">Find your new furry friend and provide them a forever home.</p>
+          </div>
+          <div>
+            <img src="/icons/pets_donation.png" alt="Donate" class="w-16 h-16 mx-auto mb-4" />
+            <h3 class="text-xl font-semibold mb-4">Donations</h3>
+            <p class="text-gray-300">Support our cause by making a donation and helping animals in need.</p>
+          </div>
+          <div>
+            <img src="/icons/alarm.png" alt="Report" class="w-16 h-16 mx-auto mb-4" />
+            <h3 class="text-xl font-semibold mb-4">Emergency Reporting</h3>
+            <p class="text-gray-300">Report stray animals in need of immediate assistance through our SOS feature.</p>
+          </div>
+        </div>
       </div>
     </section>
+    
+
+
+
 
     <!-- About Us section  html ends here -->
+
+
 
     <section class="pet-card-flex">
       <br />
