fix navbar pet new visibilty

--- a/volunteer.html
+++ b/volunteer.html
@@ -66,7 +66,7 @@
                     </li>
                     <li>
                       <a
-                        href="./news.html" class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
+                        href="./news.html" class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
                     </li>
                     <li><a href="donate.html"
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate
