--- a/volunteer.html
+++ b/volunteer.html
@@ -189,8 +189,8 @@
                         </div>
                     </div>
                     <div class="p-4 w-full">
-                        <button type="submit" class="flex mx-auto text-white bg-amber-800 border-0 py-2 px-8 rounded-md cursor-pointer hover:bg-indigo-600">
-                            Submit
+                        <button type="submit" class="flex mx-auto text-white bg-amber-800 border-0 py-2 px-8 rounded-md cursor-pointer hover:bg-red-200 button">
+                            <b>Submit</b>
                         </button>
                     </div>
                     
