added javascript to close menu

--- a/index.html
+++ b/index.html
@@ -1055,6 +1055,17 @@
       });
     </script>
     <script>
+      
+      // close the menu when a nav link is clicked
+      const menu_btn = document.querySelector('#nav-button')
+      const nav_links = document.querySelectorAll('nav ul li')
+
+      nav_links.forEach((link) => {
+        link.addEventListener('click', () => {
+          menu_btn.click();
+        })
+      })
+
       // Add this JavaScript code to trigger the animation when About content comes into view
       window.addEventListener("scroll", function () {
         const aboutSection = document.querySelector("#about");
