Added Aboutus,Petnews and Contact us links to the nav

--- a/volunteer.html
+++ b/volunteer.html
@@ -60,6 +60,15 @@
                     <li><a href="index.html"
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
                     </li>
+
+                    <li><a
+                        href="./index.html#About"
+                        class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
+                    </li>
+                    <li><a
+                        href="./news.html"
+                        class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
+                    </li>
                     
                     <li><a href="blog.html"
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
@@ -91,9 +100,29 @@
                     </li>
                     <li><a href="reportstary.html"
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
-                            Report</a></li>
+                            Report</a>
+                    </li>
 
-
+                    <li>
+                      <a href="./index.html#contact">
+                        <button
+                          class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                        >
+                          Contact Us
+                          <svg
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            class="w-4 h-4 ml-1 transform translate-x-0 transition-transform"
+                            viewBox="0 0 24 24"
+                          >
+                            <path d="M5 12h14M12 5l7 7-7 7"></path>
+                          </svg>
+                        </button>
+                      </a>
+                    </li>        
 
                     
                     <li>
