Added 'Hovering Effect' on 'Change Theme Icons'

--- a/adopt.html
+++ b/adopt.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./reportstary.css" />
     <link rel="stylesheet" href="./navbar.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
     <!-- <link rel="stylesheet" href="./introSection.css"> -->
     <!-- <link rel="stylesheet" href="./mobileView.css"> -->
     <script
@@ -183,7 +184,7 @@
             </li>
             <li>
               <a id="theme-toggle">
-                <img src="Assets/Images/sun.svg" width="50px" id="switch" />
+                <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
               </a>
             </li>
             <!-- google translate -->
