--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./navbar.css" />
     <link rel="stylesheet" href="./mobileView.css" />
     <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
     <script
       defer
       src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"
@@ -175,7 +176,7 @@
             </li>
             <li>
               <a id="theme-toggle">
-                <img src="Assets/Images/sun.svg" width="50px" id="switch" />
+                <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
               </a>
             </li>
             <!-- google translate -->
