--- a/donate.html
+++ b/donate.html
@@ -18,6 +18,7 @@
     <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
     <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
     <title>Donate animals: PetMe</title>
     <style>
       .donate-section form .relative:has(input:required) label::after {
@@ -109,7 +110,7 @@
         </li>
         <li>
           <a id="theme-toggle">
-          <img src="Assets/Images/sun.svg" width="50px" id="switch"/>
+            <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
           </a>
         </li>
         <!-- google translate -->
