--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
 	<link rel="stylesheet" href="./output.css">
 	<link rel="stylesheet" href="./style.css">
 	<link rel="stylesheet" href="./introSection.css">
@@ -110,7 +111,7 @@
 					</li>
 					<li>
 					  <a id="theme-toggle">
-						<img src="Assets/Images/sun.svg" width="50px" id="switch"/>
+						<i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
 					  </a>
 					</li>
 					<!-- google translate -->
