Keep Current Theme after Navigating to Another Page

--- a/volunteer.html
+++ b/volunteer.html
@@ -354,9 +354,9 @@
         </p>
       </div>
     </footer>
-
-    <script src="navbar.js"></script>
     <script src="light-dark-theme.js"></script>
+    <script src="navbar.js"></script>
+    <script src="volunteer.js"></script>
 </body>
 
 </html>
