--- a/donate.html
+++ b/donate.html
@@ -420,9 +420,10 @@
         </p>
       </div>
     </footer>
-
-  <script src="navbar.js"></script>
   <script src="light-dark-theme.js"></script>
+  <script src="navbar.js"></script>
+  <script src="donate.js"></script>
+
 </body>
 
 </html>
