Update images in Phoenix.html

--- a/blogs/Phoenix.html
+++ b/blogs/Phoenix.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="w-[32rem] xl:w-[117rem] my-0 mx-0 xl:mx-auto">
-        <div class="w-[360px] xl:w-[114rem] h-[25rem] xl:h-[40rem] my-[5rem] xl:mx-auto bg-[url('./img/bless-poster.jpg')] bg-no-repeat bg-cover snap-center rounded-xl">
+        <div class="w-[360px] xl:w-[114rem] h-[25rem] xl:h-[40rem] my-[5rem] xl:mx-auto bg-[url('./img/b22-poster.png')] bg-no-repeat bg-cover snap-center rounded-xl">
         </div>
 
         <main class="w-full bg-white p-5 xl:p-12 rounded-lg -mt-56 items-center my-0 mx-[20px] xl:mx-auto xl:w-[80rem]">
